--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -148,7 +148,7 @@ ul {
 /*Positioning*/
 /* Default media < 800px - two line menu */
 .the-nav {
-  min-width: 615px; }
+  min-width: 620px; }
   .the-nav .top-first {
     position: absolute; }
     .the-nav .top-first > .search-container {
@@ -157,8 +157,13 @@ ul {
     padding-top: 3px;
     position: relative; }
   .the-nav .title-container {
-    text-align: center; }
+    text-align: center;
+    display: none; }
 
+/* Media for larger devices */
+@media screen and (min-width: 630px) {
+  .title-container {
+    display: unset !important; } }
 /* Media for larger devices */
 @media screen and (min-width: 1300px) {
   .nav-bar {
