-showInputButton, submitButton: added emphasize
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -54,6 +54,9 @@ td a:visited,
   display: inline-block;
   text-align: left; }
 
+.emphasized {
+  background-color: #8DD18E !important; }
+
 input[type="file"] {
   display: none; }
 
