--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -74,6 +74,10 @@ td a:visited,
     text-align: left;
   }
 }
+.emphasized {
+  background-color:#8DD18E !important;
+}
+
 
 input[type="file"] {
   display: none;
