-inputErros: corrected -MoLoTool title: corrected
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -138,12 +138,11 @@ ul {
   color: $textColor;
   padding: 10px;
   position: absolute;
-  //min-width: 480px;
   right: 0;
   left: 400px;
 
   span {
-    cursor: pointer;
+    //cursor: pointer;
   }
 }
 
