--- a/css/controlElements.scss
+++ b/css/controlElements.scss
@@ -3,20 +3,23 @@
 Close element
 Example: <a href="#" class="close">
 */
+
+#help-cmp .close, #tutorial-cmp .close{
+  float: right;
+}
 .close {
   position: relative;
   opacity: 0.3;
   width: 20px;
   height: 20px;
 
+  cursor: pointer;
   outline: none;
 }
-
 .chosen-motif > .close {
   margin-top: 8px;
   margin-right: 2px;
 }
-
 .close:hover {
   opacity: 1;
 }
