--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -74,6 +74,10 @@ td a:visited,
     text-align: left;
   }
 }
+.top-second .interface-button {
+  padding: 10px 5px;
+  margin-right: 2px;
+}
 .emphasized {
   background-color:#8DD18E !important;
 }
