--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -67,6 +67,16 @@ input[type="file"] {
 .empty {
   display: none; }
 
+.no-highlight span {
+  -webkit-user-select: none;
+  /* Chrome all / Safari all */
+  -moz-user-select: none;
+  /* Firefox all */
+  -ms-user-select: none;
+  /* IE 10+ */
+  user-select: none;
+  /* Likely future */ }
+
 .full-screen {
   min-height: 372pxpx !important;
   word-break: break-all;
