--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -65,4 +65,5 @@ $thin: 1px;
 
 //screen width
 $widthThreshHold: 1360px;
-$topButtonsWidthThreshold: 974px;
+$topButtonsWidthThreshold: 1200px;
+$buttonsToIconsThreshold: 780px;
