--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -222,7 +222,7 @@ ul {
     position: relative;
 
     .interface-button {
-      margin-right: 8vh;
+      margin-right: 2vw;
 
       .material-icons {
         font-size: 200%;
@@ -257,7 +257,7 @@ ul {
     display: none !important;
   }
   .first-line {
-    margin-left: 8vh * 2 !important;
+    margin-left: 2vw * 2 !important;
   }
   .pull-right {
     margin-left: $topNav-navSearchBoxWidth / 1.5 !important;
